syntax = "proto3";

package com.road.yishi.proto.temple;

message TempleInfoReq {
}
