syntax = "proto3";

package com.road.yishi.proto.temple;

message TempleInfoRsp {
  string status = 1;
}
