syntax = "proto3";

package com.road.yishi.proto.temple;

message TempleReceiveReq {
  int32 pos = 1;
}
